--- a/sistema_erp/.env
+++ b/sistema_erp/.env
@@ -1,4 +1,9 @@
 DJANGO_SECRET_KEY=django-inseguro-123456789
 DJANGO_DEBUG=True
-DB_ENGINE=django.db.backends.sqlite3
-DB_NAME=db.sqlite3
+
+DB_ENGINE=django.db.backends.mysql
+DB_NAME=sistema_erp
+DB_USER=root
+DB_PASSWORD=
+DB_HOST=127.0.0.1
+DB_PORT=3306
