--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ python-dotenv>=1.0.0
 mysqlclient>=2.1
 
 # Alternativa si mysqlclient falla en Windows
-# mysql-connector-python>=8.0
+mysql-connector-python>=8.0
 
 # ===============================================================
 # Para regenerar este archivo después de instalar paquetes:
